--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
+    "@zeit/next-css": "^1.0.1",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
+    "css-loader": "^3.4.2",
     "eslint": "^6.5.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -20,7 +22,9 @@
     "next": "9.1.1",
     "next-with-apollo": "^4.3.0",
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "styled-jsx": "^3.2.4",
+    "webpack": "^4.41.6"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.4.0",
